Modified all the files and added loader file.

--- a/style.css
+++ b/style.css
@@ -27,15 +27,24 @@ h1 {
     padding: 15px 30px;
     text-align: center;
     max-width: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
 }
 
 .form input {
-    width: 500px;
+    flex: 1;
     height: 50px;
     padding: 10px;
     background: #f1f1f1;
     border: none;
     border-radius: 5px;
+}
+
+.form input:focus-visible {
+    outline: none;
+    box-shadow: 0 0 4px rgba(255, 0, 0, 0.5);
 }
 
 button.form_btn {
@@ -74,4 +83,22 @@ button.form_btn:hover {
     display: inline-block;
     border-radius: 50%;
     margin-right: 10px;
+}
+
+.loader {
+    text-align: center;
+}
+
+.loader img {
+    width: 30px;
+    height: 30px;
+}
+
+.hidden {
+    display: none;
+}
+
+.content span {
+    text-align: center;
+    display: block;
 }
